# hdfury-arcana-ha

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  flake.nix  hacs.json  pyproject.toml
.beads/: metadata.json
.github/workflows/: validate.yml
custom_components/hdfury_arcana/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  number.py  select.py  sensor.py  serial_client.py  strings.json  switch.py
custom_components/hdfury_arcana/translations/: en.json
scripts/: run-step.sh
tests/: conftest.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_entity.py  test_init.py  test_number.py  test_select.py  test_sensor.py  test_serial_client.py  test_switch.py
