[project]
name = "hdfury-arcana-ha"
version = "0.1.0"
description = "Home Assistant custom integration for HDFury Arcana"
requires-python = ">=3.12"
dependencies = [
    "pyserial-asyncio-fast>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-homeassistant-custom-component>=0.13",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88
